# Projects

FamilyTree/: README.txt  main.py
GameOfLife/: README.txt  cell.py  main.py
Minesweeper/: CMakeLists.txt  README.txt  main.c  minesweeper.c  minesweeper.h  play
SpaceInvaders/: README.txt  enemy.py  main.py  menu.py  ship.py
Tetris/: main.py
